# codebeats

./: .rules  ARCHITECTURE.md  CONFIG.md  Cargo.toml  DEPLOYMENT.md  FINAL_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION.md  KEYBOARD_CONFIG.md  LANGUAGES.md  LANGUAGE_CONFIGS.md  LANGUAGE_CONFIG_SUMMARY.md  LICENSE  PROJECT_SUMMARY.md  README.md  SHIFTED_KEYS_DEMO.md  SHIFTED_KEYS_IMPLEMENTATION.md  WAVEFORM_GUIDE.md  build-release.sh  build_package  codebeats  demo.sh  demo_codebeats.md  deploy.sh  keyboard_config.json  run.sh  test_configs.sh  test_gui
CodeBeats.app/Contents/: Info.plist
CodeBeats.app/Contents/MacOS/: codebeats-wrapper  launcher.sh
CodeBeats.app/Contents/Resources/: AppIcon.icns
CodeBeats.app/Contents/Resources/language_configs/: c.json  clojure.json  haskell.json
example_configs/: minimal.json  piano_layout.json
language_configs/: DESIGN_CHOICES.md  c.json  chinese.json  clojure.json  cpp.json  csharp.json  emacs-lisp.json  english.json  french.json  general_programming_language.json  german.json  go.json  haskell.json  japanese.json  java.json  javascript.json  kotlin.json  php.json  python.json  ruby.json  rust.json  scheme.json  spanish.json  swift.json  typescript.json
releases/CodeBeats.app/Contents/: Info.plist
releases/CodeBeats.app/Contents/MacOS/: CodeBeats
releases/CodeBeats.app/Contents/Resources/language_configs/: chinese.json  english.json  java.json
releases/codebeats-arm64-darwin/: CHANGELOG.md  HOW-TO-RUN.txt  README.md  Start-CodeBeats-CLI.sh  Start-CodeBeats-GUI.sh  codebeats  run-cli.sh  run-gui.sh
releases/codebeats-arm64-darwin/language_configs/: general_programming_language.json  japanese.json
src/: audio_engine.rs  audio_samples.rs  embedded_configs.rs  gui.rs  gui_main.rs  keyboard_config.rs  keyboard_mapping.rs  lib.rs  main.rs  scale_comparison.rs  sequence_detector.rs  test_keys.rs  waveforms.rs
src/audio/: engine.rs  mod.rs
src/keyboard/: config.rs  mapping.rs  mod.rs
src/waveform/: mod.rs  types.rs
