[package]
name = "codebeats"
version = "0.1.0"
edition = "2021"
description = "CodeBeats - Programming-optimized keyboard music simulator with real-time audio synthesis"
authors = ["jgy"]
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = [
    "audio",
    "piano",
    "keyboard",
    "music",
    "synthesis",
    "waveform",
    "adsr",
]
categories = ["multimedia::audio", "development-tools"]

[lib]
name = "codebeats"
path = "src/lib.rs"

[[bin]]
name = "codebeats"
path = "src/main.rs"

[dependencies]
cpal = "0.15"
device_query = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
