[package]
name = "codebeats"
version = "0.1.0"
edition = "2021"
description = "CodeBeats - Programming-optimized keyboard music simulator with real-time audio synthesis"
authors = ["jgy"]
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = [
    "audio",
    "piano",
    "keyboard",
    "music",
    "synthesis",
    "waveform",
    "adsr",
]
categories = ["multimedia::audio", "development-tools"]


[[bin]]
name = "codebeats"
path = "src/main.rs"

[[bin]]
name = "codebeats-gui"
path = "src/gui_main.rs"

[dependencies]
cpal = "0.15"
device_query = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
hound = "3.5"
eframe = "0.24"
egui = "0.24"
tokio = { version = "1.0", features = ["process"] }
env_logger = "0.10"
