[package]
name = "codebeats"
version = "0.1.0"
edition = "2024"
description = "CodeBeats - Programming-optimized keyboard music simulator with real-time audio synthesis"
authors = ["jgy"]
license = "GPL-3.0"
readme = "README.md"
keywords = [
    "audio",
    "piano",
    "keyboard",
    "music",
    "synthesis",
    "waveform",
    "adsr",
]
categories = ["multimedia::audio", "development-tools"]

[lib]
name = "codebeats"
path = "src/lib.rs"

[[bin]]
name = "codebeats"
path = "src/main.rs"


[dependencies]
cpal = "0.15"
device_query = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
once_cell = "1.19"
hound = "3.5"

tokio = { version = "1.0", features = ["process"] }
env_logger = "0.10"
log = "0.4"
